# arborito-sdk

./: .gitignore  CHANGELOG.md  CLI.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: sdk-publish.yml  sdk-quality.yml
arborito_sdk/: __init__.py  __main__.py  account_crypto.py  account_escrow.py  ai_util.py  app_pow.py  archive.py  archive_import.py  archive_write.py  bip340.py  branch_publish.py  bundle_publish.py  cli.py  cli_app.py  cli_emoji.py  cli_focus.py  cli_interactive.py  cli_lesson_editor.py  cli_lesson_editor_app.py  cli_library.py  cli_ops.py  cli_repl.py  cli_session.py  client.py  composed_tree.py  content.py  context_index.py  errors.py  identity_store.py  json_extract.py  lesson_document.py  lesson_toc_mutations.py  lesson_write.py  login_password.py  nip44.py  nostr_client.py  nostr_loader.py  nostr_protocol.py  nostr_publish.py  nostr_relays.py  (+7 more)
examples/: ai_tutor.py  minimal_quiz.py
nostr_spec/: README.md  nostr-spec.generated.js  spec.json
scripts/: generate_nostr_spec.py
tests/: helpers.py  test_bundle_publish.py  test_cli_advance.py  test_cli_flow.py  test_cli_navigation.py  test_flashcard_options.py  test_focus_save_memory.py  test_lesson_document.py  test_lesson_toc_mutations.py  test_memory_care_sync.py  test_multipart_chunk_load.py  test_nostr_signing.py  test_plain_text_parity.py  test_progress_rsync_merge.py  test_quiz_helpers.py  test_share_code_and_search.py  test_smoke.py  test_tree_cli.py
